Bug 481481 - Gwenview inhibits laptop suspend when viewing an image
Summary: Gwenview inhibits laptop suspend when viewing an image
Status: RESOLVED FIXED
Alias: None
Product: gwenview
Classification: Applications
Component: general (other bugs)
Version First Reported In: 24.02.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Gwenview Bugs
URL:
Keywords: qt6
: 484460 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-02-17 19:11 UTC by Adam Fontenot
Modified: 2024-04-13 09:40 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 24.02.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Adam Fontenot 2024-02-17 19:11:05 UTC
SUMMARY

Gwenview always prevents my screen from locking and my laptop from going to sleep, with no way to change this.

STEPS TO REPRODUCE
1. Open any image (e.g. a simple PNG) in Gwenview

OBSERVED RESULT

After a few seconds, when clicking on the "Power and Battery" applet in the taskbar, I see the text "Gwenview is currently blocking sleep and screen locking (Viewing media)". This appears to be correct - the screen does not lock.

EXPECTED RESULT

I expect Gwenview to block sleep only in a few instances, e.g. when viewing a fullscreen slideshow or when viewing a video with sound. I looked for options to disable this feature in the Gwenview settings, but didn't find anything.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 5.93.0
KDE Frameworks Version: 5.249.0
Qt Version: 6.7.0
Kernel Version: 6.7.4-arch1-1 (64-bit)
Graphics Platform: Wayland
Comment 1 Doug 2024-02-24 18:34:16 UTC
Can confirm that is how it's working currently.  Not sure if bug or intentional or just a feature that could be implemented but hasn't though.

Operating System: KDE neon Testing Edition
KDE Plasma Version: 6.0.0
KDE Frameworks Version: 6.0.0
Qt Version: 6.6.2
Kernel Version: 6.5.0-21-generic (64-bit)
Graphics Platform: Wayland
Graphics Processor: AMD Radeon Pro WX 3200 Series
Comment 2 Tim Carr 2024-03-11 19:08:13 UTC
This seems to also affect the fullscreen slideshow, where sleep and screenlocking aren't blocked but should be. Seems the behavior is inverted where Gwenview doesn't inhibit the screensaver when it should (fullscreen playing the slideshow), but does inhibit the screensaver when it shouldn't (just viewing images). 

Operating System: Arch Linux
KDE Plasma Version: 6.0.1
KDE Frameworks Version: 6.0.0
Qt Version: 6.6.2
Kernel Version: 6.7.9-arch1-1 (64-bit)
Graphics Platform: Wayland
Comment 3 Nate Graham 2024-04-09 16:45:59 UTC
Git commit ba840f1bbfba6b389e8f7bcc2efd39fcdcc929b2 by Nate Graham, on behalf of Daniel Strnad.
Committed on 09/04/2024 at 16:45.
Pushed by ngraham into branch 'master'.

Fix incorrectly reversed screen saver inhibition logic
FIXED-IN: 24.02.2

M  +1    -1    app/mainwindow.cpp

https://invent.kde.org/graphics/gwenview/-/commit/ba840f1bbfba6b389e8f7bcc2efd39fcdcc929b2
Comment 4 Nate Graham 2024-04-09 16:49:01 UTC
Git commit 1592fa119db3370cf963cf627c37955f65eebc59 by Nate Graham, on behalf of Daniel Strnad.
Committed on 09/04/2024 at 16:46.
Pushed by ngraham into branch 'release/24.02'.

Fix incorrectly reversed screen saver inhibition logic
FIXED-IN: 24.02.2


(cherry picked from commit ba840f1bbfba6b389e8f7bcc2efd39fcdcc929b2)

d8f075ad Fix screen saver inhibition logic

M  +1    -1    app/mainwindow.cpp

https://invent.kde.org/graphics/gwenview/-/commit/1592fa119db3370cf963cf627c37955f65eebc59
Comment 5 Tim Carr 2024-04-13 09:40:48 UTC
*** Bug 484460 has been marked as a duplicate of this bug. ***