Fix incorrectly reversed screen saver inhibition logic

BUG: 481481
FIXED-IN: 24.02.2


(cherry picked from commit ba840f1bbfba6b389e8f7bcc2efd39fcdcc929b2)

d8f075ad Fix screen saver inhibition logic